--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-ALLOWED_ORIGINS="https://receipt.madewithheart.tech,http://localhost"
+ALLOWED_ORIGINS=
+ANDROID_APP_ID=
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
